<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spanish GCSE Revision</string>
	<string name="cancelStr">Cancel</string>
    <string name="chooseQAStyleStr">Choose Question/Answer Style</string>
	<string name="chooseTopicStr">Choose Topic</string>
	<string name="conjugateStr">Conjugate</string>
    <string name="correctQueryStr">Correct?</string>
    <string name="correctButtonTip">
Press if your mental guess was correct, or you want to skip this
word; it will not be added to your list of failed words</string>
    <string name="currentStr">Currents:</string>
    <string name="deleteFailsStr">Delete all fails</string>
    <string name="englishStr">English</string>
    <string name="failStr">Fails:</string>
    <string name="failCtTip">
Number of words you got wrong at this level or carried over from
previous levels</string>
    <string name="goButtonTip">
Type in your answer and press Go; or think of your answer (ideally
speak it aloud) and press Go, then mark your own answer. Note: if
you want to skip a word, just pretend you got it right!</string>
    <string name="goStr">Go</string>
    <string name="helpHomePage">
<b>¡Bienvenida! Welcome!</b>\n
Open \'User Settings\' to change your name.
Long press on a button to show tip.\n
Rotating the device turns off text-to-speech, so if you are using
a question style where the app speaks the Spanish, it might improve
the performance if you switch off screen rotation.\n
Spanish has several words for \'you\'; to differentiate in English
we use \'thou\' for the familiar, and \'YOU\' for the plural.\n
If you have any suggestions for improving this app, please send an email
to amazemequiz@gmail.com
    </string>
    <string name="homeStr">Home</string>
    <string name="incorrectButtonTip">
Press if your mental guess was wrong; this word will be added to
your list of failed words</string>
    <string name="levelStr">Level:</string>
    <string name="listFailsStr">List all fails</string>
    <string name="micButtonTip">
Allows you to speak the answer; requires internet connection</string>
    <string name="micStr">Mic</string>
    <string name="noStr">No</string>
    <string name="numberGameStr">Number Game</string>
    <string name="numberPrompt">Number</string>
    <string name="one">1</string>
    <string name="passStr">Pass</string>
    <string name="phraseStr">Phrase</string>
    <string name="questionAnswerStr">Question -> Answer</string>
    <string name="questionsByLevelStr">Questions by Level</string>
    <string name="questionMarkStr">\?</string>
    <string name="questionStyleStr">Question Style</string>
    <string name="repeatStr">Repeat</string>
    <string name="repeatButtonTip">Repeat the spoken question</string>
    <string name="resetStr">Reset</string>
    <string name="resetButtonTip">Restart the game, 2 levels below current</string>
    <string name="sentenceStr">Sentence</string>
    <string name="showStr">Show</string>
    <string name="spanishHelpStr">Spanish Help</string>
    <string name="spanishStr">Spanish</string>
    <string name="speakerButtonTip">
Listen to the current Spanish word</string>
    <string name="tipTip">
Left swipe from side of screen to see main menu; long press on a button
to show tip</string>
    <string name="speakerStr">Speaker</string>
    <string name="updateStr">Update</string>
	<string name="userLevelStr">User level</string>
	<string name="userNameStr">User name</string>
	<string name="userSettingsStr">User Settings</string>
    <string name="verbTableStr">Verb Table</string>
    <string name="verbsOnlyStr">Verbs Only</string>
    <string name="wordStr">Word</string>
    <string name="yesStr">Yes</string>
    	
    <string name="explainStr">Explain</string>
		
    <string name="appDescription">English - Spanish Tutor</string>
		
    <string name="allStr">ALL</string>
		
</resources>
