<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jardenconsulting.spanishapp.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    
	    <FrameLayout
	        android:id="@+id/fragmentLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/statusTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <ProgressBar
	        android:id="@+id/progressBar"
	        android:layout_width="wrap_content"
	        android:visibility="invisible"
	        android:layout_height="wrap_content" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
		    <ImageView
		        android:id="@+id/imageViewLondon"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/englishStr"
		        android:src="@drawable/london4" />
	
		    <TextView
		        android:id="@+id/appDescriptionTextView"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/appDescription" />
		
		    <ImageView
		        android:id="@+id/imageViewFlamenco"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/spanishStr"
		        android:src="@drawable/flamenco" />
	
	    </LinearLayout>
	
	</LinearLayout>
	
	<ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#e3e3e3"/>    
    	    	    
</android.support.v4.widget.DrawerLayout>

